# blocks-db-wip

./: README.md  maintest.py  pyproject.toml
blocks_db/: __init__.py
docs/: python-client.md
test-dataset/: README.md  true_neighbours_deep_100k.csv
vectordb/: README.md  cli.py  client.py  config.py  serverless_vectordb.py
vectordb/config/: README.md  indexconfig.json
vectordb/core/: README.md  indexing.py  partitioning.py  preprocess.py  querying.py
vectordb/implementations/: README.md
vectordb/implementations/blocks/: indexing.py  initialize.py  partitioning.py  querying.py
vectordb/indexing/: README.md  indexator.py
vectordb/infra/: Dockerfile.faiss-layer  Dockerfile.lambda  README.md  __init__.py  lithops-infra.yml  setup.py
vectordb/infra/lambda/: lambda_code.py
vectordb/orchestration/: README.md  orchestrator.py
vectordb/utils/: README.md  dataset_ops.py  hybrid_search.py  index_ops.py  query_ops.py  s3_client.py  s3_utils.py  vector_tracking.py  vector_utils.py
